--- a/deardiary-app/package.json
+++ b/deardiary-app/package.json
@@ -14,8 +14,8 @@
   },
    "scripts": {
     "start": "react-scripts start",
-"build": "CI=false react-scripts build",    
-     "test": "react-scripts test",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
